--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
         <section id="transaction">
             <h2 class="sr-only">Transações</h2>
 
+            <a href="#" class="button new">+ Nova Transação</a>
             <table id="data-table">
                 <thead>
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <th></th>
                     </tr>
                 </thead>
 
@@ -65,18 +67,27 @@
                         <td class="description">Luz</td>
                         <td class="expense">- R$ 500,00</td>
                         <td class="date">19/06/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
 
                     <tr>
                         <td class="description">Criação Website</td>
                         <td class="income">R$ 5000,00</td>
                         <td class="date">19/06/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
 
                     <tr>
                         <td class="description">Internet</td>
                         <td class="expense">- R$ 152,00</td>
                         <td class="date">19/06/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação">
+                        </td>
                     </tr>
                 </tbody>
             </table>
