--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
             </div>
             <div class="card">
                 <h3><span>Saídas</span>
-                    <img src="./assets/expense.svg" alt="Imagens de Saídas"></h3>
+                    <img src="./assets/expense.svg" alt="Imagens de Saídas">
+                </h3>
                 <p>R$ 2.000,00</p>
             </div>
             <div class="card total">
                 <h3><span>Total</span>
-                    <img src="./assets/total.svg" alt="Imagem de Total"></h3>
+                    <img src="./assets/total.svg" alt="Imagem de Total">
+                </h3>
                 <p>R$ 3.000,00</p>
             </div>
 
@@ -95,23 +97,28 @@
     </main>
 
 
-<div class="modal-overlay active">
-    <div class="modal">
-        <div class="modal-content">
-            <div id="form">
-                <h2>Nova Transação</h2>
-                <form action="">
-                    <div class="input-group">
-                        <label for=""></label>
-                        <input type="text">
-                    </div>    
-                </form>
-            </div>
-        </div>   
-    </div>
-</div>
+    <div class="modal-overlay active">
+        <div class="modal">
+            <div class="modal-content">
+                <div id="form">
+                    <h2>Nova Transação</h2>
+                    <form action="">
+                        <div class="input-group">
+                            <label class="sr-only" for="description">Descrição</label>
+                            <input type="text" id="description" name="description" placeholder="Descrição" />
+                        </div>
 
-    
+                        <div class="input-group">
+                            <label class="sr-only" for="amount">Descrição</label>
+                            <input type="number" id="amount" name="amount" placeholder="Descrição" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <footer>
         <p>dev.finance$</p>
     </footer>
