--- a/index.html
+++ b/index.html
@@ -109,8 +109,18 @@
                         </div>
 
                         <div class="input-group">
-                            <label class="sr-only" for="amount">Descrição</label>
-                            <input type="number" id="amount" name="amount" placeholder="Descrição" />
+                            <label class="sr-only" for="amount">Valor</label>
+                            <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
+                            <small class="help">Use o sinal - (Negativo) para despesase ,(Virgula) para casas decimais</small>
+                        </div>
+                        <div class="input-group">
+                            <label class="sr-only" for="date">Data</label>
+                            <input type="date" id="date" name="date" placeholder="01/01/2021"/>
+                        </div>
+
+                        <div class="input-group actions">
+                            <a href="#" class="button cancel">Cancelar</a>
+                            <button>Salvar</button>
                         </div>
                     </form>
                 </div>
