--- a/index.html
+++ b/index.html
@@ -146,18 +146,7 @@
     <footer>
       <p>dev.finance$</p>
     </footer>
-
-    <script>
-      const Modal = {
-        open() {
-          //Adiciona a classe active ao modal
-          document.querySelector(".modal-overlay").classList.add("active");
-        },
-        close() {
-          //remove a classe active do modal
-          document.querySelector(".modal-overlay").classList.remove("active");
-        },
-      };
-    </script>
+<script src="./scripts.js"></script>
+    
   </body>
 </html>
